data/derived/comb/progs/unify/prog2891.ml.out
Characters 56-84:
  |h::t -> append(listReverse(t) ; [h]);;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'b list
